--- a/seedimage.yaml
+++ b/seedimage.yaml
@@ -4,8 +4,10 @@ metadata:
   name: fire-img
   namespace: fleet-default
 spec:
+  size: 10Gi
   type: raw
-  baseImage: registry.suse.com/rancher/elemental-teal/5.4:1.2.2
+  baseImage: registry.opensuse.org/isv/rancher/elemental/dev/containers/suse/sl-micro/6.0/kvm-os-container:2.2.0
+  # targetPlatform: linux/arm64
   cloud-config:
     users:
       - name: root
